<resources>
    <string name="app_name">Krammer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!--    Flashcard Strings-->
    <string name="flash_card">Flash Card</string>
    <string name="card_set">Flash Card Set</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Term">Term</string>
    <string name="Definition">Definition</string>
    <string name="card_label_front">Front</string>
    <string name="card_label_back">Back</string>
    <string name="create_new_set">Create New Set</string>
    <string name="add_card">Add Card</string>
    <string name="remove_card">Remove Card</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="review">Review</string>
    <string name="edit">Edit</string>
    <string name="QuizName">Quiz Name</string>
    <string name="createQuiz">Create Quiz</string>
    <string name="view_all">View all</string>
    <string name="saved_sets">Saved Sets</string>
    <string name="delete_set">Delete set</string>
    <string name="delete_set_title">Delete this set?</string>
    <string name="delete_set_msg">This cannot be undone.</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!--    Forum Strings-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Forums_main">Forums</string>
    <string name="user_id">IT19070322</string>
    <string name="forum">Forum</string>
    <string name="forum_title">Forum title one</string>
    <string name="forum_title_one">Forum Title Two</string>
    <string name="forum_title_three">Forum title three</string>
    <string name="forum_title_two">forum title two</string>
    <string name="textview1">This text section will contain a brief summary of the title.</string>
    <string name="textview2">This text is also going to be a summary of the forum your making.  It will look like this…</string>
    <string name="forum_title_2">Forum Title Two</string>
    <string name="textview3">lorem ispum i talk with a lisp im not even trying, but i see the future like an esper.</string>
    <string name="attachments">Attachments</string>
    <string name="person1">person1</string>
    <string name="person2">person2</string>
    <string name="person3">person3</string>
    <string name="createforum">CREATE FORUM</string>
    <string name="add_a_title_here">Add a title here.</string>
    <string name="create_forum">Create Forum</string>
    <string name="write_something_ghost">Type something…</string>
    <string name="add_your_description_here">Add your description here.</string>
    <string name="SUBMIT">Submit</string>
    <string name="CANCEL">Cancel</string>
    <!--    To-Do Strings-->
    <!--    Quiz Strings-->
    <string name="QuizName">Quiz Name</string>
    <string name="createQuiz">Create Quiz</string>
    <string name="Question">Question</string>
    <string name="Answer1">Answer 1</string>
    <string name="Answer2">Answer 2</string>
    <string name="Answer3">Answer 3</string>
    <string name="Answer4">Answer 4</string>
    <string name="addQuestion">Add Question</string>
    <string name="viewQuestions">View Questions</string>
    <string name="StartButton">START</string>
    <string name="next">Next</string>
</resources>