<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/dimGray"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dimGray">

        <ImageButton
            android:id="@+id/ButtonRemove"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_baseline_delete_24"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/QueAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="13dp"
            android:text="@string/Answer1"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/Question"
            app:layout_constraintTop_toBottomOf="@+id/Question" />

        <TextView
            android:id="@+id/QueAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Answer2"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/QueAnswer1"
            app:layout_constraintTop_toBottomOf="@+id/QueAnswer1" />

        <TextView
            android:id="@+id/QueAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Answer3"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/QueAnswer2"
            app:layout_constraintTop_toBottomOf="@+id/QueAnswer2" />

        <TextView
            android:id="@+id/QueAnswer4"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Answer4"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/QueAnswer3"
            app:layout_constraintTop_toBottomOf="@+id/QueAnswer3" />

        <TextView
            android:id="@+id/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/Question"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/orangeWeb"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>