<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createframeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charlestonGreen"
    android:orientation="vertical"
    tools:context=".forum.CreateForumFragment">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/createforum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_forum"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/forumcreatepage"
        android:layout_width="380dp"
        android:layout_height="530dp"
        android:layout_marginTop="58dp"
        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        app:rippleColor="#FFFFFF">

        <TextView
            android:id="@+id/yourheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:text="@string/add_a_title_here"
            android:textColor="@color/charlestonGreen"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/write_something_ghost"
            android:textColorHint="@color/dimGray"
            android:textSize="12sp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="80"
            app:helperText="*Required"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textField_title"
                android:layout_width="match_parent"
                android:layout_height="33dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/add_desc_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="125dp"
            android:text="@string/add_your_description_here"
            android:textColor="@color/charlestonGreen"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:hint="@string/write_something_ghost"
            android:textColorHint="@color/dimGray"
            android:textSize="12sp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:helperText="*Required"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldDescription"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_forum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="440dp"
            android:text="@string/CANCEL"
            android:backgroundTint="@color/dimGray"
            android:layout_marginLeft="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_forum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="440dp"
            android:backgroundTint="@color/orangeWeb"
            android:text="@string/SUBMIT"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginLeft="120dp" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
